route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: instance-developers-server
  namespace: instance-developers
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: instance-developers
    app.kubernetes.io/name: instance-developers-server
    app.kubernetes.io/part-of: argocd
  annotations:
    openshift.io/host.generated: 'true'
  
spec:
  host: >-
    instance-developers-server-instance-developers.apps.cluster-q9gbj.q9gbj.sandbox2896.opentlc.com
  to:
    kind: Service
    name: instance-developers-server
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
